# jonect

./: .gitignore  .gitmodules  Cargo.toml  README.md
docs/: architechture.md  architechture_plan.md  ties504.md
docs/current_architechture/: README.md  component_communication.uxf  high_level_architechture.uxf  server_structure.uxf
jonect-service/: Cargo.toml
src/: client.rs  config.rs  logic.rs  main.rs  server.rs  settings.rs  ui.rs  utils.rs
src/logic/: audio.rs  client.rs  server.rs
src/logic/audio/: audio_server.rs
src/logic/server/: device.rs
src/logic/server/device/: protocol.rs
src/server/: audio.rs  device.rs  message_router.rs  ui.rs  utils.rs
src/server/audio/: audio_server.rs  pulseaudio.rs
src/server/audio/pulseaudio/: state.rs  stream.rs
src/server/device/: data.rs  protocol.rs  state.rs
src/ui/: gtk_ui.rs
src/ui/gtk_ui/: app.rs  logic.rs
