[package]
name = "multidevice-server"
version = "0.1.0"
authors = ["Juuso Tuononen <jutuon@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.7.1", features = ["full"] }

[dependencies.pulse]
version = "2.23.1"
package = "libpulse-binding"

[dependencies.pulse_glib]
version = "2.23.0"
package = "libpulse-glib-binding"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
# Empty version will propably download version which will work
# with gtk.
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]
