[package]
name = "jonect"
version = "0.1.0"
authors = ["Juuso Tuononen <jutuon@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5.8"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.10.0", features = ["full"] }
tokio-util = "0.6.7"
tokio-stream = "0.1.7"
async-stream = "0.3.2"
bytes = "1.0.1"
audiopus = "0.3.0-rc.0"

[dependencies.pulse]
version = "2.24"
package = "libpulse-binding"

[dependencies.pulse_glib]
version = "2.24"
package = "libpulse-glib-binding"

[dependencies.gtk]
version = "0.14.0"
features = ["v3_20"]
